--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
                 margin: 0 auto; 
                 }
             }
-           @media screen and (max-width: 767px) {
-           #curator-feed-default-feed-layout {
-           padding-top: 50px;
-           max-width: 100%;
-           margin: 0 auto;
-           display: flex;
-           justify-content: center;
-           align-items: center;
-               }
-            }
+            @media screen and (max-width: 767px) {
+    #curator-feed-default-feed-layout {
+        padding-top: 20px; /* Reduced padding for better spacing */
+        max-width: 90%; /* Allows slight margin on both sides */
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column; /* Stack items vertically */
+        align-items: center;
+        justify-content: center;
+    }
+}
             body {
             font-family: Arial, sans-serif;
             margin: 0;
