--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
                 margin: 0 auto; 
                 }
             }
-            @media screen and (max-width: 767px) {
+           @media screen and (max-width: 767px) {
     #curator-feed-default-feed-layout {
-        padding-top: 20px; /* Reduced padding for better spacing */
-        max-width: 90%; /* Allows slight margin on both sides */
+        padding-top: 20px;
+        max-width: 90%;
         margin: 0 auto;
         display: flex;
-        flex-direction: column; /* Stack items vertically */
+        flex-direction: column;
         align-items: center;
         justify-content: center;
+        text-align: center; /* Ensure the content is aligned properly */
     }
 }
             body {
