--- a/index.html
+++ b/index.html
@@ -1654,15 +1654,14 @@
             </section>
         <!--====== End Testimonial Section ======-->
         <!--====== Start Instafeed Section ======-->
-        <div class="container mt-60">
-            <div class="row justify-content-center">
-                    <div class="section-title text-center mb-10 wow fadeInUp">
-                        <span class="sub-title st-one">Our Instagram Feed</span>
-                    </div>
-            </div>
-            <!--<div id="curator-feed-default-feed-layout"></div>
+            <div class="container mt-60">
+    <div class="row justify-content-center">
+        <div class="section-title text-center mb-10 wow fadeInUp">
+            <span class="sub-title st-one">Our Instagram Feed</span>
         </div>
-    </div>-->
+    </div>
+    <div id="curator-feed-default-feed-layout"></div> 
+</div>
             <div class="slider">
                 <div class="slides" id="slideContainer">
                     <!-- Add your Instagram embeds here -->
