--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
         <!--====== Title ======-->
         <title>Yi YUVA REC</title>
         <style>
-            @media screen and (min-width: 768px) {
-            
-            #curator-feed-default-feed-layout {
-                margin-top: 50px;
-                max-width: 500px; 
-                margin: 0 auto; 
-                }
-            }
-           @media screen and (max-width: 767px) {
-    #curator-feed-default-feed-layout {
-        padding-top: 20px;
-        max-width: 90%;
-        margin: 0 auto;
+           @media (max-width: 768px) {
+    .container {
         display: flex;
-        flex-direction: column;
-        align-items: center;
         justify-content: center;
-        text-align: center; /* Ensure the content is aligned properly */
+        align-items: center;
+        text-align: center;
+    }
+    
+    .slider {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .slide {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
     }
 }
             body {
