--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
         <!--====== Title ======-->
         <title>Yi YUVA REC</title>
         <style>
-           
+           @media screen and (max-width: 768px) {
+    .instagram-media {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        width: 100% !important;
+        max-width: 90%;
+    }
+}
             body {
             font-family: Arial, sans-serif;
             margin: 0;
