--- a/Initiatives.html
+++ b/Initiatives.html
@@ -164,6 +164,22 @@
                     </div>
                 </div>
                  <div class="row portfolio-grid">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-10">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/Smash 3.0 Portfolio.png" alt="Img">
+                                <a href="Event - Smash 3.0.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Smash 3.0.html">Smash 3.0</a></h3>
+                                <a class="cat-link">23/02/2025</a>
+                            </div>
+                        </div>
+                    </div>
                       <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-10">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
