--- a/index.html
+++ b/index.html
@@ -1769,6 +1769,11 @@
     <body>
     
         <div class="instagram-section">
+             <div class="instagram-header">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" class="profile-pic" alt="Profile">
+            <span class="username">@yiciiirec</span>
+        </div>
+
             <!-- Instagram Image (Click Redirects to Instagram) -->
             <a id="instaLink" target="_blank">
                 <img id="postImage" src="post1.jpg" class="instagram-image" alt="Instagram Post">
