--- a/index.html
+++ b/index.html
@@ -1769,10 +1769,10 @@
     <body>
     
         <div class="instagram-section">
-             <div class="instagram-header">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" class="profile-pic" alt="Profile">
-            <span class="username">@yiciiirec</span>
-        </div>
+            <div class="instagram-header">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" class="profile-pic" alt="Profile">
+                <a href="https://www.instagram.com/yiciirec?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">yiciiirec</a>
+            </div>
 
             <!-- Instagram Image (Click Redirects to Instagram) -->
             <a id="instaLink" target="_blank">
