--- a/index.html
+++ b/index.html
@@ -1793,7 +1793,7 @@
                 },
                 {
                     img: "3.jpg",
-                    caption: "Everyone deserves a warm meal and a kind heart. 🥘With AKSHAYAPATRA 4.0, we’re sharing food and care. ✨️ Join us on 8th December 2024 to spread warmth and kindness. 🌟This winter, let’s show that small acts of kindness matter. 🌏 Your donations bring comfort and hope. 🙌🏻 Together, let’s make kindness the warmth that unites us all.<br>#akshayapatra #yuva #yuvarec #rajalakshmiengineeringcollege #rec #yiyuvarec #winterdrive #actofkindness #servewithlove #sharingwarmth ",
+                    caption: "Everyone deserves a warm meal and a kind heart. 🥘With AKSHAYAPATRA 4.0, we’re sharing food and care. ✨️ Join us on 8th December 2024 to spread warmth and kindness. 🌟This winter, let’s show that small acts of kindness matter. 🌏 Your donations bring comfort and hope. 🙌🏻 Together, let’s make kindness the warmth that unites us all.<br>#akshayapatra #yuva #yuvarec #rajalakshmiengineeringcollege #rec #yiyuvarec #winterdrive #actofkindness #servewithlove",
                     link: "https://www.instagram.com/p/DDTzld6T52i/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" // Instagram link for post 3
                 },
                 {
