--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <section class="hero-banner-v1 position-relative">
             <div class="bg-one"></div>
             <div class="bg-two"></div>
-            <div class="hero-img hero-img-one scene"><span data-depth=".5"><img src="assets/images/shape/shape-2.png" class="wow fadeInLeft" alt="hero image"></span></div>>
+            <div class="hero-img hero-img-one scene"><span data-depth=".5"><img src="assets/images/shape/shape-2.png" class="wow fadeInLeft" alt="hero image"></span></div>
             <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-1.png" alt="shape"></span></div>
             <div class="shape shape-two scene"><span data-depth="2"><img src="assets/images/shape/shape-2.png" alt="shape"></span></div>
             <div class="shape shape-three scene"><span data-depth="3"><img src="assets/images/shape/shape-3.png" alt="shape"></span></div>
