--- a/reg.html
+++ b/reg.html
@@ -198,7 +198,7 @@
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".10s">
                             <div class="img-holder">
                                 <a href="Event - Republic Rhythms.html">
-                                <img src="Event - Republic Rhythms.html " alt="">
+                                <img src="assets/images/portfolio/republic rhytms cover page 1.png" alt="">
                             </a>
                             </div>
                             <div class="text text-center">
