--- a/reg.html
+++ b/reg.html
@@ -183,6 +183,20 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".10s">
                             <div class="img-holder">
+                                <a href="Event - FinFluent.html">
+                                <img src="assets/images/portfolio/FinFluent Portfolio.png" alt="">
+                            </a>
+                            </div>
+                            <div class="text text-center">
+                               
+                                <h4><br><a href="Event - FinFluent.html">FinFluent</a></h4>
+                                <p class="position">28/03/2025</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".10s">
+                            <div class="img-holder">
                                 <a href="Event - Smash 3.0.html">
                                 <img src="assets/images/portfolio/Smash 3.0 Portfolio.png" alt="">
                             </a>
