Update Event - FinFluent.html

--- a/Event - FinFluent.html
+++ b/Event - FinFluent.html
@@ -168,8 +168,8 @@
                                 <img src="assets/images/icon/icon-7.png" alt="">
                             </div>
                             <div class="text">
-                                <h4>Vertical</h4>
-                                <p></p>
+                                <h4>Date</h4>
+                                <p>28/03/2025</p>
                             </div>
                         </div>
                     </div>
@@ -192,7 +192,7 @@
                             </div>
                             <div class="text">
                                 <h4>Cause</h4>
-                                <p></p>
+                                <p>Personal Finance</p>
                             </div>
                         </div>
                     </div>
