--- a/Initiatives.html
+++ b/Initiatives.html
@@ -1048,7 +1048,7 @@
                         </div>
                     </div>
                 </div>
-                 <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-9 cat-5 cat-8">
+                 <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-11">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/smash.jpg" alt="Img">
