--- a/Initiatives.html
+++ b/Initiatives.html
@@ -244,7 +244,7 @@
                             </div>
                         </div>
                    </div>
-                      <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-3 cat-1">
+                      <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-3">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/planting smiles cover pic.png" alt="Img">
