--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                         </div>
                    </div>
                      
-                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5">
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-4">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Akshayapatra4.0.png" alt="Img">
