--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     </div>
                 </div>
                 <div class="row portfolio-grid">
-                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-4">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-7 cat-4">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/FinFluent Portfolio.png" alt="Img">
@@ -340,7 +340,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-11">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-7 cat-11">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Smash 3.0 Portfolio.png" alt="Img">
@@ -356,7 +356,7 @@
                             </div>
                         </div>
                     </div>
-                      <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-6">
+                      <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-10 cat-6">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/republic rhytms cover page 1.png" alt="Img">
@@ -372,7 +372,7 @@
                             </div>
                         </div>
                    </div>
-                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-10">
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-10">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Akshayapatra4.0.png" alt="Img">
@@ -501,7 +501,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-7 cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/CGT 5.0 REC 1.png" alt="Img">
