--- a/team.html
+++ b/team.html
@@ -107,6 +107,27 @@
     .team-item:hover .img-text {
       opacity: 1;
     }
+        .content-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.cat-btn {
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: #5956e9;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 247px;
+}
+
+.hover-content h4 {
+    display: inline-block;
+    margin: 0;
+    cursor: pointer;
 
     </style>
     <body>
