--- a/index.html
+++ b/index.html
@@ -324,6 +324,22 @@
                     </div>
                 </div>
                 <div class="row portfolio-grid">
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-6">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/Route Cause Portfolio.png" alt="Img">
+                                <a href="Event - Route Cause.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Route Cause.html">Route Cause</a></h3>
+                                <a class="cat-link">11/05/2025</a>
+                            </div>
+                        </div>
+                   </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-6">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
