--- a/index.html
+++ b/index.html
@@ -375,6 +375,22 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-4">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
+                                <img src="assets/images/portfolio/e cycle portfolio picture.png" alt="Img">
+                                <a href="Event - E cycle.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - E cycle.html">E cycle</a></h3>
+                                <a class="cat-link">23/04/2025</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-4">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
                                 <img src="assets/images/portfolio/FinFluent Portfolio.png" alt="Img">
                                 <a href="Event - FinFluent.html" class="portfolio-hover">
                                     <div class="hover-content">
