--- a/Event - E cycle.html
+++ b/Event - E cycle.html
@@ -139,7 +139,7 @@
 
                         <div class="col-lg-6">
                             <div class="img-holder mb-50 position-relative z-1 wow fadeInLeft">
-                                <img src="assets/images/Events/E-cycle/E cycle poster (2).jpeg" alt="">
+                                <img src="assets/images/Events/E cycle/1.jpg" alt="">
                                 <div class="shape shape-one"><span><img src="assets/images/shape/shape-5.png" alt=""></span></div>
                             </div>
                         </div>
