--- a/Event - E cycle.html
+++ b/Event - E cycle.html
@@ -50,10 +50,10 @@
                             <a href="mailto:yiyuva2019@gmail.com">yiyuva2019@gmail.com</a>
                             <a href="mailto:yuva@rajalakshmi.edu.in">yuva@rajalakshmi.edu.in</a>
                         </li>
-                        <li>
+                       <li>
                             <i class="fal fa-phone"></i>
-                            <a href="tel:8667060010">Richard - 86670 60010</a>
-                            
+                            <a href="tel: 9841937389">Linghesh B - 9841937389</a>
+                            <a href="tel: 9894376855">Nandhini R - 9894376855</a>
                         </li>
                     </ul>
                 </div>
@@ -120,7 +120,7 @@
                             <h1>Events & Projects</h1>
                             <ul class="breadcrumbs-link">
                                 <li><a href="index.html">Home</a></li>
-                                <li class="active">A Road to Safety</li>
+                                <li class="active">E Cycle </li>
                             </ul>
                         </div>
                     </div>
