--- a/Gallery.html
+++ b/Gallery.html
@@ -140,6 +140,14 @@
                             </div>
                         </div>
                     </div>
+                     <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Her Rhythm Within/Gallery-1.png" alt="">
+                                <a href="assets/images/Events/Her Rhythm Within/Gallery-1.png" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
