--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                             </div>
                         </div>
                    </div>
-                   <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-6">
+                   <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-10 cat-11">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Times of treasures Portfolio.png" alt="Img">
