--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Times of Treasures.html">Times of Treasures</a></h3>
+                                <h3 class="title"><a href="Event - Times of Treasures.html">Timeless Treasures</a></h3>
                                 <a class="cat-link">01/05/2025</a>
                             </div>
                         </div>
