--- a/index.html
+++ b/index.html
@@ -359,15 +359,15 @@
                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-10 cat-11">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/Times of treasures Portfolio.png" alt="Img">
-                                <a href="Event - Times of Treasures.html" class="portfolio-hover">
+                                <img src="assets/images/portfolio/Timeless Treasures Portfolio.png" alt="Img">
+                                <a href="Event - Timeless Treasures.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Times of Treasures.html">Timeless Treasures</a></h3>
+                                <h3 class="title"><a href="Event - Timeless Treasures.html">Timeless Treasures</a></h3>
                                 <a class="cat-link">01/05/2025</a>
                             </div>
                         </div>
