Update and rename Event - E cycle.html to Event - E - Cycle.html

--- a/Event - E - Cycle.html
+++ b/Event - E - Cycle.html
@@ -120,7 +120,7 @@
                             <h1>Events & Projects</h1>
                             <ul class="breadcrumbs-link">
                                 <li><a href="index.html">Home</a></li>
-                                <li class="active">E Cycle </li>
+                                <li class="active">E - Cycle </li>
                             </ul>
                         </div>
                     </div>
@@ -146,12 +146,12 @@
                         <div class="col-lg-6">
                             <div class="text-wrapper mb-50 wow fadeInRight">
                                 <div class="text">
-                                    <h3 class="title">E- Cycle</h3>
+                                    <h3 class="title">E - Cycle</h3>
                                     <p class="position">23,24 April</p>
                                     <p align="justify">The members of Yi YUVA REC conducted E-Cycle, a dynamic e-waste drive, rooted in environmental responsibility and ethos of social welfare on the 23rd and 24th of April, 2025. This initiative championed conscious disposal and served as a chance to act, educate and evolve. The campus came alive with collection stalls near BB Court, Hut Café and D Block, each becoming more than a drop-off zone. They became spaces where sustainability found its voice, where students and staff brought not only e-waste but a shared intention. Over 500 items were collected from 50+ donors, which will be entrusted to authorised recyclers for sustainable and lawful processing. E-Cycle extended far beyond collection, it captivated minds with interactive and educational games like E-waste Card Match, Mineral Bowl, Jenga Trivia and Pictionary - the stalls transformed into hubs of learning and laughter. Each game wove environmental facts into fun, ensuring engagement without compromising insight. Participants were greeted with smiles, appreciation tokens and chocolates - a simple gesture that made sustainability sweeter. At the Hut Café, a Pledge Wall bloomed with handwritten promises, each one a powerful declaration of commitment to a cleaner tomorrow. Beyond applause, generosity found a special spotlight - the participant with the most thoughtful and diverse contributions received sustainable glass bottles and eco - friendly pencils. E-Cycle was not just about clearing out clutter, it was about redefining how a community responds to the environmental challenges of a digital age. By normalizing responsible disposal and sparking conversations around sustainability, the event planted the seeds for long - term ecological awareness on campus and beyond.</p>
                                 </div>
                             </div>
-                        </div>
+                        </div> 
                     </div>
                 </div>
             </div>
