--- a/index.html
+++ b/index.html
@@ -376,14 +376,14 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/e cycle portfolio picture.png" alt="Img">
-                                <a href="Event - E cycle.html" class="portfolio-hover">
+                                <a href="Event - E - Cycle.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - E cycle.html">E cycle</a></h3>
+                                <h3 class="title"><a href="Event - E - Cycle.html">E - Cycle</a></h3>
                                 <a class="cat-link">23/04/2025</a>
                             </div>
                         </div>
