--- a/team.html
+++ b/team.html
@@ -291,11 +291,11 @@
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".25s">
                             <div class="img-holder">
-                                <img src="assets/images/team/Dharshan.png" alt="">
+                                <img src="assets/images/team/nandhini RK.png" alt="">
                             </div>
                             <div class="text text-center">
                                 
-                                <h4><a><br>Dharshan Nikesh S</a></h4>
+                                <h4><a><br>Nandhini R K</a></h4>
                                 <p class="position">Co Chair - Accessibility</p>
                             </div>
                         </div>
@@ -884,19 +884,6 @@
                             </div>
                             <div class="text text-center">
                                 <h4><br>Dr. R. Premkumar</h4>
-                                <p class="position">YUVA REC Nodal Officers</p>
-                            </div>
-                        </div>
-                    </div>
-               
-                    <div  class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".3s">
-                            <div class="img-holder">
-                                <img style="border-radius:50%" src="assets/images/team/hemavathy (2).png" alt="">
-                            </div>
-                            <div class="text text-center">
-                                <h4><br>Dr. Hemavathy R V</h4>
-                                <p class="position">YUVA REC Nodal Officers</p>
                             </div>
                         </div>
                     </div>
