--- a/Initiatives.html
+++ b/Initiatives.html
@@ -227,7 +227,23 @@
                                 <a class="cat-link">23/04/2025</a>
                             </div>
                         </div>
-                   </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-4">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/Instolutions 3.0 Portfolio.png" alt="Img">
+                                <a href="Event - Instolutions 3.0.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Instolutions 3.0.html">Instolutions 3.0</a></h3>
+                                <a class="cat-link">21/04/2025</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-4">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
