--- a/Initiatives.html
+++ b/Initiatives.html
@@ -108,8 +108,7 @@
                     </div>
                 </div>
             </div>
-        </header><!--====== End Header Section ======-->
-        <!--====== Start Page-banner section ======-->
+        </header>
         <section class="page-banner bg_cover position-relative z-1">
             <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-1.png" alt=""></span></div>
             <div class="shape shape-two scene"><span data-depth="2"><img src="assets/images/shape/shape-2.png" alt=""></span></div>
@@ -129,8 +128,6 @@
                 </div>
             </div>
         </section>
-        <!--====== End Page-banner section ======-->
-        <!--====== Start Portfolio Section ======-->
         <section class="portfolio-area portfolio-area-v1 light-gray-bg pt-130 pb-70" id="initiatives">
             <div class="container">
                 <div class="row">
@@ -1417,7 +1414,7 @@
                     </div>
                 </div>
             </div>
-        </section><!--====== End Portfolio Section ======-->
+        </section>
         <!--====== Start Footer ======-->
        <footer class="footer-area page-footer light-gray-bg">
         <div class="container">
