Update Event - Route Cause.html

--- a/Event - Route Cause.html
+++ b/Event - Route Cause.html
@@ -192,7 +192,7 @@
                             </div>
                             <div class="text">
                                 <h4>Location</h4>
-                                <p>Elliot's Edward Beach</p>
+                                <p>Edward Elliot's Beach</p>
                             </div>
                         </div>
                     </div>
