Update Event - Route Cause.html

--- a/Event - Route Cause.html
+++ b/Event - Route Cause.html
@@ -181,7 +181,7 @@
                             </div>
                             <div class="text">
                                 <h4>Target Audience</h4>
-                                <p>Common People</p>
+                                <p>General Public</p>
                             </div>
                         </div>
                     </div>
