--- a/Event - Route Cause.html
+++ b/Event - Route Cause.html
@@ -168,8 +168,8 @@
                                 <img src="assets/images/icon/icon-7.png" alt="">
                             </div>
                             <div class="text">
-                                <h4>Date</h4>
-                                <p>11/05/2025</p>
+                                <h4>Verticals</h4>
+                                <p>Road Safety</p>
                             </div>
                         </div>
                     </div>
