Update Event - Route Cause.html

--- a/Event - Route Cause.html
+++ b/Event - Route Cause.html
@@ -168,7 +168,7 @@
                                 <img src="assets/images/icon/icon-7.png" alt="">
                             </div>
                             <div class="text">
-                                <h4>Verticals</h4>
+                                <h4>Vertical</h4>
                                 <p>Road Safety</p>
                             </div>
                         </div>
