Update Event - Her Rhythm Within.html

--- a/Event - Her Rhythm Within.html
+++ b/Event - Her Rhythm Within.html
@@ -180,7 +180,7 @@
                             </div>
                             <div class="text">
                                 <h4>Target Audience</h4>
-                                <p>Young Women and Individuals Seeking Menstrual Wellness</p>
+                                <p>Young Women and Wellness Seekers</p>
                             </div>
                         </div>
                     </div>
