--- a/Event - Timeless Treasures.html
+++ b/Event - Timeless Treasures.html
@@ -168,8 +168,8 @@
                                 <img src="assets/images/icon/icon-7.png" alt="">
                             </div>
                             <div class="text">
-                                <h4>Date</h4>
-                                <p>28/03/2025</p>
+                                <h4>Vertical</h4>
+                                <p>Rural Initiative</p>
                             </div>
                         </div>
                     </div>
@@ -192,7 +192,7 @@
                             </div>
                             <div class="text">
                                 <h4>Cause</h4>
-                                <p>Bringing happiness to our elderly community</p>
+                                <p>Bringing Joy to the Elderly</p>
                             </div>
                         </div>
                     </div>
