Update Event - FinFluent.html

--- a/Event - FinFluent.html
+++ b/Event - FinFluent.html
@@ -192,7 +192,7 @@
                             </div>
                             <div class="text">
                                 <h4>Cause</h4>
-                                <p>Personal Finance</p>
+                                <p>To create an awareness about Personal Finance</p>
                             </div>
                         </div>
                     </div>
