Update Event - Smash 3.0.html

--- a/Event - Smash 3.0.html
+++ b/Event - Smash 3.0.html
@@ -183,7 +183,7 @@
                             </div>
                             <div class="text">
                                 <h4>Target Audience</h4>
-                                <p>Lung Cancer Awareness</p>
+                                <p>General Public</p>
                             </div>
                         </div>
                     </div>
@@ -194,7 +194,7 @@
                             </div>
                             <div class="text">
                                 <h4>Cause</h4>
-                                <p>General Public</p>
+                                <p>To create awareness on lung cancer</p>
                             </div>
                         </div>
                     </div>
